# ncursesplusplus

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/gallery/: CMakeLists.txt  main.cxx
examples/reader/: CMakeLists.txt  main.cxx
include/ncurses++/: application.hpp  attributes.hpp  color.hpp  color_rect.hpp  constraints.hpp  drawing.hpp  factory.hpp  hsplit.hpp  item_list.hpp  palette.hpp  rect.hpp  session.hpp  text.hpp  text_list.hpp  vsplit.hpp  widget.hpp
src/: CMakeLists.txt  color_rect.cxx  drawing.cxx  palette.cxx  session.cxx  text.cxx  text_list.cxx
